2004-07-06 Chris Weibe

	Fix for PR 69199
	* src/org/eclipse/cdt/internal/ui/viewsupport/CElementLabels.java

2004-07-06 Hoda Amer
	Fix for PR 69330 : Outline is flickering.
	
2004-07-06 Chris Wiebe
	This patch fixes a problem when using the class wizard, where the system
	include separator '<' was used for project-relative include path instead
	of '"'.
	
2004-06-29 Alain Magloire

	Fix for PR 68820.
	* src/org/eclipse/cdt/internal/ui/BaseCElementContentProvider.java
	* src/org/eclipse/cdt/internal/ui/CElementImageProvider.java

2004-06-27 Bogdan Gheorghe
	Fix for Bug 67987: [Search] C Search results do no show up as editor annotations
	
2004-06-24 Hoda Amer
	Changing Refactoring name collision from Error to FatalError
	
2004-06-25 Chris Wiebe
	Fix for PR# 49849: [New Class Wizard] Able to add a new C++ Class with the same name (at same location) from  New C++ Class Wizard
	
2004-06-24 Bogdan Gheorghe
	Fix for 66695: [Indexer] Manually add an include path to a file/folder is ignored
	Changed CompletionEngine getScannerInfo to get the info from a resource instead of 
	a project in order to get a complete list of include paths
	
	* src/org/eclipse/cdt/internal/ui/search/actions/SelectionParseAction.java
	* src/org/eclipse/cdt/internal/ui/text/contentassist/CompletionEngine.java
	
	
2004-06-24 Tanya Wolff
	Fix for PR 60299: Accessibility: Lost children in Binary Parser properties dialog
	Switched the binary parsers Options group with its child composite so the
	group is read before the controls in the group.
	Externalized a few dialog titles.
	* src/org/eclipse/cdt/ui/dialogs/BinaryParserBock.java
	* src/org/eclipse/cdt/ui/dialogs/CygwinBinaryParserPage.java
	* src/org/eclipse/cdt/ui/dialogs/GNUElfBinaryParserPage.java
	* src/org/eclipse/cdt/ui/dialogs/BinaryParserBock.java
	
2004-06-24 Hoda Amer
	A small fix to the New Class Wizard "link to file" option.
	Fix for PR# 47570 : [New Class Wizard] Use of internal Eclipse classes in CDT(LinkToFileGroup)
	