@@ -430,4 +430,11 @@ OutputLocationDialog.ChooseOutputFolder.description=&Choose the folder for the b
 ClasspathContainerWizard.pagecreationerror.title= Library Wizard
 ClasspathContainerWizard.pagecreationerror.message=Wizard page creation failed. Check log for details.
 
-
+# --- New File ---
+WizardNewFileCreationPage.progress = Creating
+WizardNewFileCreationPage.errorTitle = Creation Problems
+WizardNewFileCreationPage.fileLabel = File &name:
+WizardNewFileCreationPage.file = file
+WizardNewFileCreationPage.internalErrorTitle = Creation problems
+WizardNewFileCreationPage.internalErrorMessage = Internal error: {0}
+WizardNewFileCreationPage.fileExistsMessage = A file ''{0}'' already exists in the file system.
